--- a/DarkerSmile.UnityManagement/DarkerSmile.UnityManagement.csproj
+++ b/DarkerSmile.UnityManagement/DarkerSmile.UnityManagement.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A01D80CF-4457-4A44-925E-35F237D948BD}</ProjectGuid>
+    <ProjectGuid>{A7D9EB9C-8797-440F-9F66-9665FD3EAE45}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>JS.UnityManager.App</RootNamespace>
-    <AssemblyName>JS.UnityManager.App</AssemblyName>
+    <RootNamespace>DarkerSmile.UnityManagement</RootNamespace>
+    <AssemblyName>DarkerSmile.UnityManagement</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,17 +40,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IView.cs" />
-    <Compile Include="MainFormControllerImpl.cs" />
-    <Compile Include="IMainFormController.cs" />
+    <Compile Include="Contract\IUnityProjectRepository.cs" />
+    <Compile Include="Entities\Meridie.cs" />
+    <Compile Include="Entities\Time.cs" />
+    <Compile Include="Features\CompositeProjectFinder.cs" />
+    <Compile Include="Features\DirectoryProjectFinder.cs" />
+    <Compile Include="Contract\IProjectFinder.cs" />
+    <Compile Include="Contract\IProjectLauncher.cs" />
+    <Compile Include="Features\UnityProjectRepository.cs" />
+    <Compile Include="Features\UnityVersionRepository.cs" />
+    <Compile Include="Exceptions\InvalidUnityInstallDirectory.cs" />
+    <Compile Include="Features\UnityVersionController.cs" />
+    <Compile Include="Exceptions\NoProjectProvided.cs" />
+    <Compile Include="Exceptions\NoUnityVersionProvided.cs" />
+    <Compile Include="Exceptions\ProjectCannotBeOpened.cs" />
+    <Compile Include="Contract\IUnityVersionRepository.cs" />
+    <Compile Include="Features\RecentProjectFinder.cs" />
+    <Compile Include="Features\ProjectLauncher.cs" />
+    <Compile Include="Entities\UnityVersion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnityManagerCommands.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DarkerSmile.UnityManagement\DarkerSmile.UnityManagement.csproj">
-      <Project>{A7D9EB9C-8797-440F-9F66-9665FD3EAE45}</Project>
-      <Name>DarkerSmile.UnityManagement</Name>
-    </ProjectReference>
+    <Compile Include="Entities\UnityProject.cs" />
+    <Compile Include="Features\UnityVersionFinder.cs" />
+    <Compile Include="Exceptions\VersionNotInstalled.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
